blogs aside fixes and portfolio nad addiitions and menu alignment

--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -51,7 +51,7 @@ footer p {
 }
 
 .navbar-brand {
-  font-size: 2rem;
+  font-size: 2.5rem;
 }
 
 #navbarHeader {
@@ -73,4 +73,16 @@ footer p {
 
 .tech-count {
   padding: 10px;
+}
+
+.img-circular{
+  width: 135px;
+  height: 200px;
+  background-size: cover;
+  display: block;
+  border-radius: 100px;
+  -webkit-border-radius: 100px;
+  -moz-border-radius: 100px;
+  border: 3px solid rgba(3, 122, 255, 0.7);
+  margin-top: 5px;
 }
